[project]
name = "metal-ansys-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "quantum-metal",
]


[tool.uv.sources]
    quantum-metal = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/qiskit-metal",
]
